[package]
name = "swaysome"
version = "1.1.5"
authors = ["Skia <skia@hya.sk>"]
edition = "2021"
description = "swaysome provides a different way to manage your multiple outputs with the sway windows manager"
license = "MIT"
repository = "https://gitlab.com/hyask/swaysome"
homepage = "https://gitlab.com/hyask/swaysome"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version = "3.2.16", features = ["derive"] }
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"
