[package]
name = "swayless"
version = "1.0.0"
authors = ["JoaoCostaIFG <joaocosta.work@posteo.net>"]
edition = "2021"
description = "swayless is an attempt to bring Suckless' tag system to sway"
license = "MIT"
repository = "https://github.com/JoaoCostaIFG/swayless"
homepage = "https://github.com/JoaoCostaIFG/swayless"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"
swayipc = "3.0.1"
